# PKGInstall

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui
.github/: linux-appimage-qt.sh
.github/workflows/: build.yml
src/: crypto.h  endian.h  enum.h  io_file.cpp  io_file.h  loader.cpp  nt_api.h  pkg.cpp  pkg.h  psf.cpp  psf.h
